--- a/template.html
+++ b/template.html
@@ -3,17 +3,23 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <title>Hello Rigo with Vanilla.js</title>
+        <title>Second Counter</title>
        
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"crossorigin="anonymous">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://kit.fontawesome.com/072e5df971.js" crossorigin="anonymous"></script>
 
     </head>
     <body>
-        <div id="app"></div>
+        <div id="wrapper">
+            <div className="container-fluid">
+                <div className="row">
+                    <div id="app"></div>
+                </div>
+            </div>
 
-        <!-- Many of bootstrap components require the use of JavaScript to function -->
-        <!-- Popper and BootStrap JS -->
+        </div>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     </body>
 </html>
